# protobuf-grpc-tests

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
app-oneof-test/: CMakeLists.txt  base.proto  test.cpp
app-wo-findprotobuf/: CMakeLists.txt  CMakeLists.txt.bak  build.bat  dht.proto  test.cpp
client-server-test1/: CMakeLists.txt  README.md
client-server-test1/client/: CMakeLists.txt  client.cpp
client-server-test1/interface/: CMakeLists.txt  calculator.proto
client-server-test1/server/: CMakeLists.txt  server.cpp
cmake_include/: common.txt
if/: CMakeLists.txt  base.proto
if-with-target/: CMakeLists.txt
if-without-findprotobuf/: CMakeLists.txt  CMakeLists.txt.ORIG  base.proto  dht.proto  test.cpp
if/dht/: CMakeLists.txt  dht.proto
rpc-local-remote-test/: CMakeLists.txt  dht.proto  test.cpp
rpc-local-remote-test/local/: CMakeLists.txt  local.cpp
test_message/: build.bat  msg.pb.cc  msg.pb.h  msg.proto
